--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
 
+  <main>
   <div class="container-parent">
     <div class="container">
       
@@ -49,6 +50,8 @@
     </div> <!-- End of container-->
 
   </div> <!-- End of parent container-->
+
+  </main>
 </body>
 
 </html>
